--- a/index.html
+++ b/index.html
@@ -16,30 +16,39 @@
       </header>
 
       <section class="container">
-        <p>Rebuilding my portfolio, soon to go live.</p>
-        <h1>Hello, my name is Andrew Wandiga.</h1>
-        <p>I am freelance Product UX Designer and front-end web developer. I help organizations to build and optimize user-friendly web and mobile products.</p>
-        
-        <h1>Available</h1>
-        <p>I'm currently available for work. Connect with me:</p>
+        <div class="notice">
+          <p>Rebuilding my portfolio, soon to go live!</p>
+        </div>
+        <div class="main-content">
+          <h1>Hello, my name is Andrew Wandiga.</h1>
+          <p>I am freelance Product UX Designer and front-end web developer. I help organizations to build and optimize user-friendly web and mobile products.</p>
+          <h1>Available</h1>
+          <p>I'm currently available for work. Connect with me:</p>
+        </div>
         
         <!-- Contact cards for visitors to reach out to me. Each contact-card has a paragraph element for the contact name. The contact-card is used to create the container for the name. -->
-        <div class="contact-card">
-          <i class="ph-envelope-simple"></i>
-          <p>Email</p>
-        </div>
-        <div class="contact-card">
-          <i class="ph-twitter-logo"></i>
-          <p>Twitter</p>
-        </div>
-        <div class="contact-card">
-          <i class="ph-linkedin-logo"></i>
-          <p>LinkedIn</p>
-        </div>
-        <div class="contact-card">
-          <i class="ph-download-simple"></i>
-          <p>Download Résumé</p>
+        <div class="cards">
+          <div class="contact-card">
+            <i class="ph-envelope-simple"></i>
+            <p>Email</p>
+          </div>
+          <div class="contact-card">
+            <i class="ph-twitter-logo"></i>
+            <p>Twitter</p>
+          </div>
+          <div class="contact-card">
+            <i class="ph-linkedin-logo"></i>
+            <p>LinkedIn</p>
+          </div>
+          <div class="contact-card">
+            <i class="ph-download-simple"></i>
+            <p>Résumé</p>
+          </div>
         </div>
       </section>
+
+      <footer>
+        <p>Andrew Wandiga - 2022</p>
+      </footer>
    </body>
 </html>
